--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.1",
         "amidesfahani/filament-tinyeditor": "^2.0",
+        "barryvdh/laravel-dompdf": "^3.0",
         "bezhansalleh/filament-shield": "^3.2",
         "eightynine/filament-excel-import": "^3.1",
         "filament/filament": "^3.2",
